# data-engineering-tech-test-frejosaru-ejercicio5

./: .pre-commit-config.yaml  Makefile  README.md  tox.ini
.github/workflows/: ci.yml  docker-build.yml  release.yml
airflow/: docker-compose.yaml
airflow/dags/: example_etl_dag.py
ci/scripts/: build_docker.sh  run_lint.sh
docker/: .dockerignore  etl.Dockerfile
etl/: README.md  pyproject.toml
etl/src/: etl_job.py
etl/tests/: test_etl_job.py
modeling/: README.md
modeling/sql/: 01_dimensions.sql  02_fact.sql  03_indexes.sql
sql/ad-hoc/: README.md
